--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     background-color: #f2f2f2;
     color: #333;
+    background-image: url(tesla-model-s.avif);
 }
 
 header {
@@ -89,4 +90,8 @@ h3 {
 #Tesla_model_erintokepernyo {
     float: right;
     width: 50%;
+}
+
+.cimek {
+    font-family: sans-serif;
 }
