--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@ body {
     background-color: #f2f2f2;
     color: #333;
     background-image: url(tesla-model-s.avif);
-} {
-    position: fixed;
 }
 
 header {
@@ -97,9 +95,18 @@ h3 {
 .cimek {
     font-family: sans-serif;
 }
-p>a{
-    color: #cc0000;
+.box a{
+    display: inline-block;
+    background-color: black;
+    color: white; 
+    padding: 10px 20px;  
+    border-radius: 5px; 
+    transition: color 0.3s ease;
     text-decoration: none;
-    font-size: 9;
     font-weight: bold;
+    font-size: 9;
+}
+
+.box:hover a{
+    background-color: red;
 }
