--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ footer {
     width: 59%;
     float: inline-end;
 }
-iframe {
+video {
     float: right;
 } 
 
@@ -104,7 +104,6 @@ h3 {
     transition: color 0.3s ease;
     text-decoration: none;
     font-weight: bold;
-    font-size: 9;
 }
 
 .box:hover a{
