--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     background-color: #f2f2f2;
     color: #333;
-    background-image: url(tesla-model-s.avif);
+    background-image: url(beehive-black-honeycomb-red-hexagon-3840x2160-c2-000000-b22222-l2-5-75-a-50-f-5.svg);
 }
 
 header {
