--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f2f2f2;
     color: #333;
-    background-image: url(beehive-black-honeycomb-red-hexagon-3840x2160-c2-000000-b22222-l2-5-75-a-50-f-5.svg);
+    background-image: url(gg.jpg);
 }
 
 /* Navigáció fekete háttérrel */
